# wealth_pb_ee_models

./: LICENSE  README.md  pyproject.toml  pyproject.toml.rtf
models/: pretrained_models.py
scr/wealth_pb_ee_models/models/: MODEL_nuWIDECNN_AG_SINGLE_macmetal_2025-12-03_14-26-02_f1score_0.596.weights.h5  MODEL_nuWIDECNN_AG_SINGLE_macmetal_2025-12-03_14-26-02_f1score_0.596_model_architecture.json  MODEL_nuWIDECNN_AP_AG_macmetal_2025-11-26_19-19-37_f1score_0.76_betterEE.weights.h5  MODEL_nuWIDECNN_AP_AG_macmetal_2025-11-26_19-19-37_f1score_0.76_betterEE_model_architecture.json  MODEL_nuWIDECNN_AP_SINGLE_macmetal_2025-11-21_15-29-12_f1score_0.728.weights.h5  MODEL_nuWIDECNN_AP_SINGLE_macmetal_2025-11-21_15-29-12_f1score_0.728_model_architecture.json
scr/wealth_pb_ee_models/utils/: uos_update_LS.py  utils.py  utils_analytics.py
src/wealth_pb_ee_models/utils/: utils.py  utils_analytics.py
