[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "WEALTH_PA_EE_MODELS"
version = "0.1.0"
description = "WEALTH physical activity and energy expenditure models and utilities"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "joblib",
]
authors = [
    { name = "Luis", email = "luis@example.com" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps."
]

[tool.setuptools]
# This explicit mapping helps pip find the package in 'src' during editable installs
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools.package-data]
# Using the asterisk pattern is fine, but ensure the folder name matches your actual folder in src/
"*" = ["**/*.csv", "**/*.json", "**/*.yaml", "**/*.yml", "**/*.txt", "**/*.pkl", "**/*.joblib", "**/*.h5", "**/*.pt"]
